# cpp-dump

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  cpp-dump.hpp  define_export_object_macro.hpp  dump.cpp  dump.hpp  expand_va_macro.hpp  export_container.hpp  export_iterable.hpp  export_map.hpp  export_set.hpp  export_string.hpp  export_tuple.hpp  export_tuple_like.hpp  export_var.cpp  export_var.hpp  export_vector.hpp  export_xixo.hpp  iterable.hpp  iterable_like.hpp  type_check.hpp  utility.hpp
.github/workflows/: clang-format.yml  codeql.yml  ctest.yml  dump-test.yml  readme-test.yml
cpp-dump/hpp/: class_name.hpp  escape_sequence.hpp  expand_va_macro.hpp  iterable.hpp  log_label.hpp  options.hpp  type_check.hpp  type_name.hpp  utility.hpp
cpp-dump/hpp/export_command/: export_command.hpp  skip_container.hpp
cpp-dump/hpp/export_var/: export_arithmetic.hpp  export_asterisk.hpp  export_container.hpp  export_enum.hpp  export_enum_generic.hpp  export_exception.hpp  export_map.hpp  export_object.hpp  export_object_common.hpp  export_object_generic.hpp  export_ostream.hpp  export_pointer.hpp  export_set.hpp  export_string.hpp  export_tuple.hpp  export_unsupported.hpp  export_var.hpp  export_xixo.hpp
cpp-dump/hpp/export_var/export_other/: export_es_value_t.hpp  export_optional.hpp  export_other.hpp  export_other_object.hpp  export_type_info.hpp
hpp/: define_export_object_macro.hpp  escape_sequence.hpp  expand_va_macro.hpp  export_arithmetic.hpp  export_asterisk.hpp  export_bitset.hpp  export_command.hpp  export_container.hpp  export_enum.hpp  export_exception.hpp  export_map.hpp  export_object.hpp  export_optional.hpp  export_other.hpp  export_pointer.hpp  export_ref.hpp  export_set.hpp  export_string.hpp  export_tuple.hpp  export_tuple_like.hpp  export_var.hpp  export_xixo.hpp  iterable.hpp  log_info.hpp  log_label.hpp  log_label_funcs.hpp  omit_manipulators.hpp  options.hpp  type_check.hpp  utility.hpp
hpp/export_command/: export_command.hpp  omitted_container.hpp  skip_container.hpp
hpp/export_var/: dangerous_export_object.hpp  export_arithmetic.hpp  export_asterisk.hpp  export_container.hpp  export_enum.hpp  export_exception.hpp  export_map.hpp  export_object.hpp  export_object_common.hpp  export_object_generic.hpp  export_optional.hpp  export_ostream.hpp  export_pointer.hpp  export_set.hpp  export_string.hpp  export_tuple.hpp  export_var.hpp  export_var_fwd.hpp  export_xixo.hpp
hpp/export_var/export_other/: export_es_value_t.hpp  export_optional.hpp  export_other.hpp  export_other_object.hpp  export_type_info.hpp
readme/: auto-indent.cpp  customizable-colors.cpp  customize-dump.cpp  formatting-with-manipulators.cpp  function-version.cpp  introduction.cpp  macro-version.cpp  no-es.cpp  supports-various-types.cpp  test-code.cpp  user-defined-class-generic.cpp  user-defined-class-ostream.cpp  user-defined-class.cpp  user-defined-class2.cpp  user-defined-class3.cpp  user-defined-enum-generic.cpp  user-defined-enum.cpp
test/: CMakeLists.txt  Makefile  clean_logs.sh  color_indent_test.cmake  color_non_variable_test.cmake  color_non_variable_test.cpp  color_rtti_test.cmake  color_rtti_test.cpp  color_std_version_test.cmake  color_std_version_test.cpp  color_test.cmake  color_test.cpp  color_variable_test.cmake  common.cmake  copy_txts.sh  dump_indent_test.cmake  dump_indent_test.cpp  dump_non_variable_test.cmake  dump_non_variable_test.cpp  dump_rtti_test.cmake  dump_std_version_test.cmake  dump_std_version_test.cpp  dump_test.cmake  dump_test.cpp  dump_test.sh  dump_test.txt  dump_test_log.txt  dump_test_narrow_log.txt  dump_test_result.txt  dump_test_shallow_log.txt  dump_test_wide_log.txt  dump_variable_test.cmake  dump_variable_test.cpp  log_info_test.cmake  log_info_test.cpp  log_label_test.cmake  log_label_test.cpp  odr_test.cpp  odr_test.hpp  odr_test2.cpp  (+5 more)
test/txt/: color_by_syntax2_shallow.txt  color_by_syntax2_wide.txt  color_indent_by_syntax2_normal.txt  color_indent_by_syntax_normal.txt  color_indent_by_syntax_shallow.txt  color_indent_normal_by_syntax.txt  color_indent_normal_original.txt  color_indent_shallow_by_syntax.txt  color_indent_shallow_original.txt  color_narrow.txt  color_non_variable_by_syntax.txt  color_non_variable_by_syntax2.txt  color_non_variable_by_syntax2_narrow.txt  color_non_variable_by_syntax_narrow.txt  color_non_variable_original.txt  color_rtti.txt  color_shallow.txt  color_std_version_20_clang.txt  color_std_version_20_gnu.txt  color_std_version_20_msvc.txt  color_variable_apple_by_syntax.txt  color_variable_apple_original.txt  color_variable_clang_by_syntax.txt  color_variable_clang_original.txt  color_variable_gnu_by_syntax.txt  color_variable_gnu_original.txt  color_variable_linux_by_syntax.txt  color_variable_linux_original.txt  color_variable_msvc_by_syntax.txt  color_variable_msvc_original.txt  color_variable_win32_by_syntax.txt  color_variable_win32_original.txt  color_wide.txt  dump.txt  dump_indent_narrow.txt  dump_indent_normal.txt  dump_indent_shallow.txt  dump_indent_wide.txt  dump_narrow.txt  dump_non_variable.txt  (+38 more)
